test/2/scope/circular-def.err
test/2/scope/circular-def.ploy:1:5-6: scope error: expected a value; `x` refers to a forward declaration.
| x = x
      ~
